# gcp-customer-support-bot

./: README.md  main.py  pyproject.toml
src/: model.py
src/bot/: assistant.py  data.py  retriever.py  tools.py
