[project]
name = "gcp-customer-support-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-firestore>=2.20.2",
    "google-cloud-pubsub>=2.29.0",
    "google-genai>=1.13.0",
    "langchain-community>=0.3.23",
    "langchain-google-vertexai>=2.0.21",
    "langgraph>=0.4.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
